<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My First Application</string>
    <string name="student_info">Student: Vadim\nGroup: 3.2ISiP-2</string>
    <string name="avatar_description">The author avatar</string>
    <string name="menu_description">Menu</string>
    <string name="like_description">Likes</string>
    <string name="share_description">Share</string>
    <string name="views_description">Pageviews</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>
    <string name="post_hint">What’s new with you?</string>
    <string name="save_post">To publish</string>
    <string name="cancel_edit_hint">Editing...</string>
    <string name="cancel_edit">Cancel</string>
    <string name="add_post">Add a post</string>
    <string name="edit_post_title">New post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post_edit_title">Edit the post</string>
    <string name="error_empty_content">The text cannot be empty</string>
    <string name="play_video">Play the video</string>
    <string name="open_external">Open in an external application</string>
    <string name="error_no_video_app">No video viewing app found</string>
    <string name="error_cannot_open_video">Could not open the video</string>
    <string name="share_post_via">Share via</string>
    <string name="post_removed">post_removed</string>

</resources>